--- a/src/queue/Main.form
+++ b/src/queue/Main.form
@@ -80,9 +80,11 @@
                 <LineBorder/>
               </Border>
             </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Helvetica" size="24" style="1"/>
+            </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="0">
-                <Column editable="false" title="Index" type="java.lang.Integer"/>
+              <Table columnCount="1" rowCount="0">
                 <Column editable="false" title="Value" type="java.lang.Integer"/>
               </Table>
             </Property>
