--- a/src/queue/Main.form
+++ b/src/queue/Main.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -33,10 +34,10 @@
                   <Group type="102" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="193" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="enqueueButton" min="-2" pref="176" max="-2" attributes="0"/>
-                          <Component id="dequeueButton" min="-2" pref="176" max="-2" attributes="0"/>
-                          <Component id="QueueSize" alignment="0" min="-2" pref="164" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="enqueueButton" pref="176" max="32767" attributes="0"/>
+                          <Component id="dequeueButton" pref="176" max="32767" attributes="0"/>
+                          <Component id="QueueSize" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -81,7 +82,7 @@
               </Border>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Helvetica" size="24" style="1"/>
+              <Font name="Helvetica" size="14" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="1" rowCount="0">
